# SimplexSolverQt

./: .gitignore  CMakeLists.txt  README.md  datos_grafico3D.json  grafico3D.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modelo.cpp  modelo.h  resources.qrc  simplexsolver.cpp  simplexsolver.h  styles.qss  uibuilder.cpp  uibuilder.h
_python_env/: pyvenv.cfg
_python_env/Scripts/: activate  activate.bat
